// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Credits useContainer hook should match snapshot 1`] = `
{
  "dataSource": [
    {
      "key": "1234-Neo",
      "movieSlug": "1234-the-matrix",
      "posterPath": "/image",
      "releaseDate": "1999-01-01",
      "releaseDateTitle": "1999",
      "role": "as Neo",
      "title": "The Matrix",
    },
    {
      "key": "1223-undefined",
      "movieSlug": "1223-the-matrix-reloaded",
      "posterPath": "/image",
      "releaseDate": "2003-01-01",
      "releaseDateTitle": "2003",
      "role": "—",
      "title": "The Matrix Reloaded",
    },
    {
      "key": "1234-Director",
      "movieSlug": "1234-the-matrix",
      "posterPath": "/image",
      "releaseDate": "1999-01-01",
      "releaseDateTitle": "1999",
      "role": "Director",
      "title": "The Matrix",
    },
    {
      "key": "4321-Director",
      "movieSlug": "4321-jupiter-ascending",
      "posterPath": null,
      "releaseDate": "2120-01-01T00:00:00.000Z",
      "releaseDateTitle": "—",
      "role": "Director",
      "title": "Jupiter Ascending",
    },
  ],
  "error": null,
  "handleChangeFilter": [Function],
  "loading": false,
  "person": {
    "biography": "test-biography",
    "birthday": "1999-01-01",
    "external_ids": {
      "facebook_id": "facebook_user",
      "instagram_id": "instagram_user",
      "tiktok_id": "tiktok_user",
      "twitter_id": "twitter_user",
    },
    "gender": 0,
    "id": 1234,
    "known_for_department": "Acting",
    "movie_credits": {
      "cast": [
        {
          "character": "Neo",
          "id": 1234,
          "popularity": 100500,
          "poster_path": "/image",
          "release_date": "1999-01-01",
          "title": "The Matrix",
        },
        {
          "character": "",
          "id": 1223,
          "popularity": 100500,
          "poster_path": "/image",
          "release_date": "2003-01-01",
          "title": "The Matrix Reloaded",
        },
      ],
      "crew": [
        {
          "department": "Directing",
          "id": 1234,
          "job": "Director",
          "popularity": 100500,
          "poster_path": "/image",
          "release_date": "1999-01-01",
          "title": "The Matrix",
        },
        {
          "department": "Directing",
          "id": 4321,
          "job": "Director",
          "popularity": 999,
          "poster_path": null,
          "release_date": "",
          "title": "Jupiter Ascending",
        },
      ],
    },
    "name": "test-person",
    "place_of_birth": "New York, USA",
    "popularity": 100500,
    "profile_path": "/image",
  },
  "personSlug": "1234-darth-maul",
}
`;

exports[`Credits useContainer hook should match snapshot with "cast" filter 1`] = `
{
  "dataSource": [
    {
      "key": "1234-Neo",
      "movieSlug": "1234-the-matrix",
      "posterPath": "/image",
      "releaseDate": "1999-01-01",
      "releaseDateTitle": "1999",
      "role": "as Neo",
      "title": "The Matrix",
    },
    {
      "key": "1223-undefined",
      "movieSlug": "1223-the-matrix-reloaded",
      "posterPath": "/image",
      "releaseDate": "2003-01-01",
      "releaseDateTitle": "2003",
      "role": "—",
      "title": "The Matrix Reloaded",
    },
  ],
  "error": null,
  "handleChangeFilter": [Function],
  "loading": false,
  "person": {
    "biography": "test-biography",
    "birthday": "1999-01-01",
    "external_ids": {
      "facebook_id": "facebook_user",
      "instagram_id": "instagram_user",
      "tiktok_id": "tiktok_user",
      "twitter_id": "twitter_user",
    },
    "gender": 0,
    "id": 1234,
    "known_for_department": "Acting",
    "movie_credits": {
      "cast": [
        {
          "character": "Neo",
          "id": 1234,
          "popularity": 100500,
          "poster_path": "/image",
          "release_date": "1999-01-01",
          "title": "The Matrix",
        },
        {
          "character": "",
          "id": 1223,
          "popularity": 100500,
          "poster_path": "/image",
          "release_date": "2003-01-01",
          "title": "The Matrix Reloaded",
        },
      ],
      "crew": [
        {
          "department": "Directing",
          "id": 1234,
          "job": "Director",
          "popularity": 100500,
          "poster_path": "/image",
          "release_date": "1999-01-01",
          "title": "The Matrix",
        },
        {
          "department": "Directing",
          "id": 4321,
          "job": "Director",
          "popularity": 999,
          "poster_path": null,
          "release_date": "",
          "title": "Jupiter Ascending",
        },
      ],
    },
    "name": "test-person",
    "place_of_birth": "New York, USA",
    "popularity": 100500,
    "profile_path": "/image",
  },
  "personSlug": "1234-darth-maul",
}
`;

exports[`Credits useContainer hook should match snapshot with "crew" filter 1`] = `
{
  "dataSource": [
    {
      "key": "1234-Director",
      "movieSlug": "1234-the-matrix",
      "posterPath": "/image",
      "releaseDate": "1999-01-01",
      "releaseDateTitle": "1999",
      "role": "Director",
      "title": "The Matrix",
    },
    {
      "key": "4321-Director",
      "movieSlug": "4321-jupiter-ascending",
      "posterPath": null,
      "releaseDate": "2120-01-01T00:00:00.000Z",
      "releaseDateTitle": "—",
      "role": "Director",
      "title": "Jupiter Ascending",
    },
  ],
  "error": null,
  "handleChangeFilter": [Function],
  "loading": false,
  "person": {
    "biography": "test-biography",
    "birthday": "1999-01-01",
    "external_ids": {
      "facebook_id": "facebook_user",
      "instagram_id": "instagram_user",
      "tiktok_id": "tiktok_user",
      "twitter_id": "twitter_user",
    },
    "gender": 0,
    "id": 1234,
    "known_for_department": "Acting",
    "movie_credits": {
      "cast": [
        {
          "character": "Neo",
          "id": 1234,
          "popularity": 100500,
          "poster_path": "/image",
          "release_date": "1999-01-01",
          "title": "The Matrix",
        },
        {
          "character": "",
          "id": 1223,
          "popularity": 100500,
          "poster_path": "/image",
          "release_date": "2003-01-01",
          "title": "The Matrix Reloaded",
        },
      ],
      "crew": [
        {
          "department": "Directing",
          "id": 1234,
          "job": "Director",
          "popularity": 100500,
          "poster_path": "/image",
          "release_date": "1999-01-01",
          "title": "The Matrix",
        },
        {
          "department": "Directing",
          "id": 4321,
          "job": "Director",
          "popularity": 999,
          "poster_path": null,
          "release_date": "",
          "title": "Jupiter Ascending",
        },
      ],
    },
    "name": "test-person",
    "place_of_birth": "New York, USA",
    "popularity": 100500,
    "profile_path": "/image",
  },
  "personSlug": "1234-darth-maul",
}
`;
